test/files/neg/abstract-report.scala
class Unimplemented extends TraversableOnce[String] { }